# rust_os_v1

./: Cargo.toml  Makefile  README.md  x86_64-blog_os.json
src/: interrupts.rs  lib.rs  main.rs  vga_buffer.rs
src/arch/x86_64/: boot.s  linker.ld  long_mode_init.s
