[package]
name = "rust_os_v1"
version = "0.1.0"
authors = ["Griffin Morgan <gmmorgan96@ghostosproject.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"